updating ALS notebook

--- a/notebooks/ASL.ipynb
+++ b/notebooks/ASL.ipynb
@@ -3,20 +3,32 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "purple-vocabulary",
+   "id": "short-sally",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark import SparkContext\n",
     "from pyspark.sql.functions import col, explode\n",
+    "\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "from pyspark.ml.recommendation import ALS\n",
+    "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accepted-button",
+   "metadata": {},
+   "source": [
+    "### Initialize spark session"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "careful-polish",
+   "id": "related-messenger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +37,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "several-shanghai",
+   "metadata": {},
+   "source": [
+    "### Load dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "third-modeling",
+   "id": "rubber-second",
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "impressed-moscow",
+   "id": "superb-brown",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "moved-amplifier",
+   "id": "standing-valve",
    "metadata": {},
    "outputs": [
     {
@@ -170,9 +190,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "checked-ballet",
+   "metadata": {},
+   "source": [
+    "### Calculate sparsity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "liberal-welsh",
+   "id": "north-aaron",
    "metadata": {},
    "outputs": [
     {
@@ -197,9 +225,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dental-nancy",
+   "metadata": {},
+   "source": [
+    "### Data exploration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "racial-isaac",
+   "id": "thousand-distribution",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "transparent-lawrence",
+   "id": "featured-benjamin",
    "metadata": {},
    "outputs": [
     {
@@ -285,21 +321,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "foreign-litigation",
+   "cell_type": "markdown",
+   "id": "french-timber",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pyspark.ml.evaluation import RegressionEvaluator\n",
-    "from pyspark.ml.recommendation import ALS\n",
-    "from pyspark.ml.tuning import ParamGridBuilder, CrossValidator"
+    "### ALS Model build"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "juvenile-twins",
+   "id": "located-burden",
    "metadata": {},
    "outputs": [
     {
@@ -325,9 +357,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acceptable-timing",
+   "metadata": {},
+   "source": [
+    "#### Hyperparameter tuning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "differential-duration",
+   "id": "bronze-reporter",
    "metadata": {},
    "outputs": [
     {
@@ -350,9 +390,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "complex-insulation",
+   "metadata": {},
+   "source": [
+    "#### Cross-validation pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "solid-serve",
+   "id": "comprehensive-brand",
    "metadata": {},
    "outputs": [
     {
@@ -373,9 +421,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "lyric-rehabilitation",
+   "metadata": {},
+   "source": [
+    "#### Model training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "higher-wiring",
+   "id": "fuzzy-multiple",
    "metadata": {},
    "outputs": [
     {
@@ -397,9 +453,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "human-uzbekistan",
+   "metadata": {},
+   "source": [
+    "### Select best model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "copyrighted-albuquerque",
+   "id": "clean-luxury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,9 +479,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "passing-radical",
+   "metadata": {},
+   "source": [
+    "### Test model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spatial-password",
+   "id": "documented-microphone",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "british-range",
+   "id": "approximate-window",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,9 +511,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "offensive-blank",
+   "metadata": {},
+   "source": [
+    "### Model evaluation and recommendation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-australian",
+   "id": "tired-diversity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "running-dairy",
+   "id": "final-vehicle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "canadian-operations",
+   "id": "collaborative-percentage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legal-chambers",
+   "id": "equivalent-shelter",
    "metadata": {},
    "outputs": [],
    "source": [
