--- a/notebooks/ASL.ipynb
+++ b/notebooks/ASL.ipynb
@@ -539,7 +539,7 @@
     "n_recommendations = n_recommendations.withColumn('rec_exp', explode('recommendations')) \\\n",
     "                                     .select('userId', col('rec_exp.movieId'), col(\"rec_exp.rating\"))\n",
     "\n",
-    "n_recommendations.limits(10).show()"
+    "n_recommendations.limit(10).show()"
    ]
   },
   {
@@ -565,9 +565,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tf3]",
+   "display_name": "tf4",
    "language": "python",
-   "name": "conda-env-tf3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
